# serendipity

./: .envrc  .gitignore  README.md  cabal.project
assets/: free-policy.plutus  free-validator.plutus  rand-validator.plutus  stake-nft-policy.plutus  stake-validator.plutus  test.plutus
off-chain/: testValidator.ts  types.ts  vrf.ts
on-chain/: on-chain.cabal
on-chain/src/: RandValidator.hs  StakeValidator.hs  Testing.hs  Validator.hs
onchain/: onchain.cabal
onchain/src/: Validator.hs
plutus-vrf/: plutus-vrf.cabal
plutus-vrf/src/: VRF.hs
plutus-vrf/src/Plutus/: VRF.hs
simulation/: node.ts  validators.json
simulation/src/: functions.ts  types.ts  vrf.ts
utilities/: utilities.cabal
utilities/src/: Utilities.hs
utilities/src/Utilities/: Misc.hs  PlutusTx.hs  Serialize.hs
