cabal-version:      3.0
name:               utilities
version:            0.1.0.0
license:            Apache-2.0
author:             perturbing
maintainer:         thomas.vellekoop@iohk.io
build-type:         Simple

library
    hs-source-dirs:   src
    exposed-modules:  Utilities
    other-modules:    Utilities.PlutusTx
                      Utilities.Serialize
                      Utilities.Misc
    default-language: Haskell2010
    build-depends:    base ^>=4.14.3.0
                    , cardano-api
                    , plutus-ledger-api
                    , plutus-tx
                    , serialise
                    , bytestring
    ghc-options: -Wall -fobject-code -fno-ignore-interface-pragmas
                 -fno-omit-interface-pragmas -fno-strictness 
                 -fno-spec-constr -fno-specialise -fexpose-all-unfoldings
                 -fplugin-opt PlutusTx.Plugin:defer-errors
